# Tachy

./: README.md
Simulation/: Potential.hpp
Tachy_repo/: CMakeLists.txt  README.md
Tachy_repo/include/backreaction/: Backreaction.hpp  VarianceBR.hpp
Tachy_repo/include/bg/: BackgroundState.hpp  BackgroundStepper.hpp  Derived.hpp
Tachy_repo/include/core/: Types.hpp
Tachy_repo/include/driver/: CoupledDriver.hpp
Tachy_repo/include/model/: PaperPotential.hpp  Potential.hpp
Tachy_repo/include/obs/: Curvature.hpp
Tachy_repo/include/parallel/: KDecompose.hpp  MPIContext.hpp
Tachy_repo/include/pert/: InitialConditions.hpp  ModeState.hpp  QEOM.hpp
Tachy_repo/src/: main.cpp
